--- a/build_production/signature.html
+++ b/build_production/signature.html
@@ -17,6 +17,14 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
     td,th,div,p,a,h1,h2,h3,h4,h5,h6 {font-family: "Inter", sans-serif; mso-line-height-rule: exactly;}
+    a {
+      color: inherit;
+      text-decoration: none;
+      font-size: inherit;
+      font-family: inherit;
+      font-weight: inherit;
+      line-height: inherit;
+    }
   </style>
   <![endif]-->
     <title>Signature</title>
@@ -42,13 +50,9 @@
   .sm-w-3-4 {
     width: 75% !important;
   }
-  .sm-px-16 {
-    padding-left: 16px !important;
-    padding-right: 16px !important;
-  }
-  .sm-px-8 {
-    padding-left: 8px !important;
-    padding-right: 8px !important;
+  .sm-px-0 {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
   }
   .sm-text-sm {
     font-size: 11px !important;
@@ -66,10 +70,22 @@
         <td align="center">
           <table class="sm-w-full" style="width: 600px; padding-top: 16px; padding-bottom: 16px;" cellpadding="0" cellspacing="0" role="presentation">
             <tr>
-              <td align="center" class="sm-px-16">
-                <table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
+              <td align="center" class="sm-px-0">
+                <table style="margin-bottom: 24px; width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
                   <tr>
-                    <td class="sm-px-8" style="padding-left: 24px; padding-right: 24px; font-weight: 300; color: #262626;">
+                    <td class="sm-px-0" style="border-bottom: 1px solid #e8e7e4; padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 300; color: #262626;">
+                      <p style="margin: 0; margin-bottom: 16px; font-weight: 700;">
+                        Dobrý den,
+                      </p>
+                      <p style="margin: 0; font-size: 11px;">
+                        zde obsah vaší zprávy.
+                      </p>
+                    </td>
+                  </tr>
+                </table>
+                <table style="margin-top: 32px; width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
+                  <tr>
+                    <td class="sm-px-0" style="padding-left: 0; padding-right: 0; font-weight: 300; color: #262626;">
                       <p style="margin: 0; margin-bottom: 4px; font-weight: 700; text-transform: uppercase;">
                         Patrik Vaďura
                       </p>
@@ -77,15 +93,15 @@
                         Design & web development
                       </p>
                       <p style="font-size: 11px; font-weight: 700; color: #b29f80;">
-                        <span class="borderContact" style="margin-right: 4px; padding-right: 2px; border-right: 1px solid #b29f80;">
+                        <span class="borderContact" style="margin-right: 4px; padding-right: 2px; border-right: 1px solid #b29f80; color: #b29f80; text-decoration: none;">
                           +420 725 007 655
                         </span>
-                        <span class="borderContact" style="margin-right: 4px; padding-right: 2px; border-right: 1px solid #b29f80;">
+                        <a href="mailto:vadura@finommedia.cz;" class="borderContact" style="margin-right: 4px; padding-right: 2px; border-right: 1px solid #b29f80; color: #b29f80; text-decoration: none;">
                           vadura@finommedia.cz
-                        </span>
-                        <span class="borderContact" style="margin-right: 4px; padding-right: 2px; border-right: 1px solid #b29f80;">
+                        </a>
+                        <a href="" class="borderContact" style="margin-right: 4px; padding-right: 2px; border-right: 1px solid #b29f80; color: #b29f80; text-decoration: none;">
                           patrikvadura.cz
-                        </span>
+                        </a>
                         <span class="sm-block sm-mt-8" style="margin-left: 2px;">
                           <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_fb_gmpsgi.png" width="14px" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0;" alt="">
                           <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_li_youztx.png" width="14px" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0;" alt="">
@@ -96,20 +112,22 @@
                     </td>
                   </tr>
                 </table>
-                <table class="sm-w-full" style="width: 600px; padding-bottom: 16px;" cellpadding="0" cellspacing="0" role="presentation">
+                <table class="sm-w-full" style="margin-top: 8px; width: 600px; padding-bottom: 16px;" cellpadding="0" cellspacing="0" role="presentation">
                   <tr>
-                    <td class="sm-w-1-4 sm-px-8" style="width: 16.666667%; padding-left: 24px; font-weight: 300; color: #262626;">
-                      <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636235405/finom_email-signature/email_profile_vadura_gzafhw.png" width="70px" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0;" alt="">
+                    <td class="sm-w-1-4 sm-px-0" style="width: 16.666667%; padding-left: 0; font-weight: 300; color: #262626;">
+                      <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636285573/finom_email-signature/email_profile_bw_vadura_oa3m8k.png" width="70px" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0;" alt="">
                     </td>
-                    <td class="sm-w-3-4" style="width: 83.333333%; padding-left: 16px; font-weight: 300; color: #262626;">
+                    <td class="sm-w-3-4" style="width: 83.333333%; padding-left: 0; font-weight: 300; color: #262626;">
                       <p style="margin-bottom: 4px; font-size: 11px; font-weight: 700; text-transform: uppercase;">
                         Finom Group a.s.
                       </p>
                       <p style="margin: 0; font-size: 11px;">
-                        Stojanova 1334  |  686 01 Uherské Hradiště |  info@finomgroup.cz
+                        Stojanova 1334  |  686 01 Uherské Hradiště | <a href="mailto:info@finomgroup.cz;" style="color: #262626!important; text-decoration: none!important;">info@finomgroup.cz</a>
                       </p>
                       <p class="sm-text-sm sm-font-bold" style="font-weight: 500; text-transform: uppercase; color: #b29f80;">
-                        WWW.FINOMGROUP.CZ
+                        <a href="https://patrikvadura.cz" style="color: #b29f80; text-decoration: none;">
+                          WWW.FINOMGROUP.CZ
+                        </a>
                       </p>
                     </td>
                   </tr>
