fix mobile blue link phone

--- a/build_production/signature.html
+++ b/build_production/signature.html
@@ -93,9 +93,9 @@
                         Design & web development
                       </p>
                       <p style="font-size: 11px; font-weight: 700; color: #b29f80;">
-                        <span class="borderContact" style="margin-right: 4px; padding-right: 2px; border-right: 1px solid #b29f80; color: #b29f80; text-decoration: none;">
+                        <a href="tel:+420 725 007 655;" class="borderContact" style="margin-right: 4px; padding-right: 2px; border-right: 1px solid #b29f80; color: #b29f80; text-decoration: none;">
                           +420 725 007 655
-                        </span>
+                        </a>
                         <a href="mailto:vadura@finommedia.cz;" class="borderContact" style="margin-right: 4px; padding-right: 2px; border-right: 1px solid #b29f80; color: #b29f80; text-decoration: none;">
                           vadura@finommedia.cz
                         </a>
