lik color in text

--- a/build_production/signature.html
+++ b/build_production/signature.html
@@ -25,6 +25,9 @@
       font-weight: inherit;
       line-height: inherit;
     }
+    .contentLink a {
+      color: #b29f80 !important;
+    }
   </style>
   <![endif]-->
     <title>Signature</title>
@@ -73,11 +76,11 @@
               <td align="center" class="sm-px-0">
                 <table style="margin-bottom: 24px; width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
                   <tr>
-                    <td class="sm-px-0" style="border-bottom: 1px solid #e8e7e4; padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 300; color: #262626;">
+                    <td class="contentLink sm-px-0" style="border-bottom: 1px solid #e8e7e4; padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 300; color: #262626;">
                       <p style="margin: 0; margin-bottom: 16px; font-weight: 700;">
                         Dobrý den,
                       </p>
-                      <p style="margin: 0; font-size: 11px;">
+                      <p class="contentLink" style="margin: 0; font-size: 11px;">
                         zde obsah vaší zprávy.
                       </p>
                     </td>
