--- a/build_production/signature.html
+++ b/build_production/signature.html
@@ -15,18 +15,17 @@
     </xml>
   </noscript>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
-    td,th,div,p,a,h1,h2,h3,h4,h5,h6 {font-family: "Inter", sans-serif; mso-line-height-rule: exactly;}
-    a {
-      color: inherit;
-      text-decoration: none;
-      font-size: inherit;
-      font-family: inherit;
-      font-weight: inherit;
-      line-height: inherit;
+    @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+    body, table, td, th, div, p, a, h1, h2, h3, h4, h5, h6 {
+      font-family: 'Lato', Helvetica, Arial, sans-serif; mso-line-height-rule: exactly !important;
     }
-    .contentLink a {
-      color: #b29f80 !important;
+    a {
+      color: inherit !important;
+      text-decoration: none !important;
+      font-size: inherit !important;
+      font-family: 'Lato', Helvetica, Arial, sans-serif; mso-line-height-rule: exactly !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
     }
   </style>
   <![endif]-->
@@ -68,19 +67,19 @@
 </head>
 <body style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #ffffff;">
   <div role="article" aria-roledescription="email" aria-label="Signature" lang="en">
-    <table style="width: 100%; font-family: ui-sans-serif, system-ui, -apple-system, 'Inter', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
+    <table style="width: 100%; font-family: ui-sans-serif, system-ui, -apple-system, 'Lato', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
       <tr>
         <td align="center">
-          <table class="sm-w-full" style="width: 600px; padding-top: 16px; padding-bottom: 16px;" cellpadding="0" cellspacing="0" role="presentation">
+          <table class="sm-w-full" style="width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
             <tr>
               <td align="center" class="sm-px-0">
                 <table style="margin-bottom: 24px; width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
                   <tr>
-                    <td class="contentLink sm-px-0" style="border-bottom: 1px solid #e8e7e4; padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 300; color: #262626;">
+                    <td class="sm-px-0" style="border-bottom: 1px solid #e8e7e4; padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 300; color: #262626;">
                       <p style="margin: 0; margin-bottom: 16px; font-weight: 700;">
                         Dobrý den,
                       </p>
-                      <p class="contentLink" style="margin: 0; font-size: 11px;">
+                      <p style="margin: 0; font-size: 11px;">
                         zde obsah vaší zprávy.
                       </p>
                     </td>
@@ -95,7 +94,7 @@
                       <p style="margin: 0; font-size: 11px; text-transform: uppercase;">
                         Design & web development
                       </p>
-                      <p style="font-size: 11px; font-weight: 700; color: #b29f80;">
+                      <p style="font-size: 11px; font-weight: 700;">
                         <a href="tel:+420 725 007 655;" class="borderContact" style="margin-right: 4px; padding-right: 2px; border-right: 1px solid #b29f80; color: #b29f80; text-decoration: none;">
                           +420 725 007 655
                         </a>
@@ -127,8 +126,8 @@
                       <p style="margin: 0; font-size: 11px;">
                         Stojanova 1334  |  686 01 Uherské Hradiště | <a href="mailto:info@finomgroup.cz;" style="color: #262626!important; text-decoration: none!important;">info@finomgroup.cz</a>
                       </p>
-                      <p class="sm-text-sm sm-font-bold" style="font-weight: 500; text-transform: uppercase; color: #b29f80;">
-                        <a href="https://patrikvadura.cz" style="color: #b29f80; text-decoration: none;">
+                      <p class="sm-text-sm sm-font-bold" style="font-weight: 500; text-transform: uppercase;">
+                        <a href="https://patrikvadura.cz" style="color: #b29f80!important; text-decoration: none!important;">
                           WWW.FINOMGROUP.CZ
                         </a>
                       </p>
