uprava podpisů + sazba

--- a/build_production/jednotlivci-provizorni/signature_finom-takac.html
+++ b/build_production/jednotlivci-provizorni/signature_finom-takac.html
@@ -96,17 +96,17 @@
                 <tr>
                   <td class="sm-px-0" style="padding-left: 0; padding-right: 0; font-weight: 300; color: #262626;">
                     <p style="margin: 0; margin-bottom: 4px; font-weight: 700; text-transform: uppercase; line-height: 2.5rem;">
-                      Robert Pertl
+                      Jakub Takáč
                     </p>
                     <p style="margin: 0; font-size: 10px; font-weight: 300; text-transform: uppercase; letter-spacing: 1px;">
-                      REALITNÍ MAKLÉŘ
+                      BUSINESS DEVELOPMENT / PARTNER
                     </p>
                     <p style="font-size: 11px; font-weight: 700;">
-                      <a href="tel:+420 776 544 494;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
-                        +420 776 544 494 |
+                      <a href="tel:+420 777 364 446;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
+                        +420 777 364 446 |
                       </a>
-                      <a href="mailto:pertl@finomreality.cz;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
-                        pertl@finomreality.cz |
+                      <a href="mailto:takac@finomgroup.cz;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
+                        takac@finomgroup.cz |
                       </a>
                       <a href="https://finomreality.cz" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
                         finomreality.cz |
@@ -129,7 +129,7 @@
             <table class="sm-w-full" style="width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
               <tr>
                   <td class="sm-w-1-4 sm-px-0" style="width: 16.666667%; padding-left: 0; font-weight: 300; color: #262626;">
-                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641816873/finom_email-signature/profile-pertl_kbat3z.png" width="70" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 70px;" alt="">
+                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641814098/finom_email-signature/profile-antonovic_xmgirb.png" width="70" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 70px;" alt="">
                   </td>
                 <td class="sm-w-3-4" style="width: 83.333333%; padding-left: 0; font-size: 10px; color: #a2a0a0;">
                   <p style="margin-bottom: 4px; font-weight: 700; text-transform: uppercase;">
