polaskova,cevorova,peringerova,tyml,antonovic

--- a/build_production/jednotlivci-provizorni/signature_finom-cevorova.html
+++ b/build_production/jednotlivci-provizorni/signature_finom-cevorova.html
@@ -83,7 +83,7 @@
             <table class="sm-w-full" style="width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
               <tr>
                 <td class="sm-w-1-4 sm-px-0" style="width: 16.666667%; padding-left: 0; font-weight: 300; color: #262626;">
-                  <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641551789/finom_email-signature/logo/logo_finom-group_qsqysn.png" width="80" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 80px;" alt="">
+                  <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641551789/finom_email-signature/logo/logo_finom-finance_avt34z.png" width="80" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 80px;" alt="">
                 </td>
               </tr>
             </table>
@@ -96,26 +96,24 @@
                 <tr>
                   <td class="sm-px-0" style="padding-left: 0; padding-right: 0; font-weight: 300; color: #262626;">
                     <p style="margin: 0; margin-bottom: 4px; font-weight: 700; text-transform: uppercase; line-height: 2.5rem;">
-                      Jakub Takáč
+                      Petra Čevorová
                     </p>
                     <p style="margin: 0; font-size: 10px; font-weight: 300; text-transform: uppercase; letter-spacing: 1px;">
-                      BUSINESS DEVELOPMENT | PARTNER | DEVELOPMENT
+                      FINANČNÍ SPECIALISTA
                     </p>
                     <p style="font-size: 11px; font-weight: 700;">
-                      <a href="tel:+420 777 364 446;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
-                        +420 777 364 446 |
+                      <a href="tel:+420 608 318 259;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #d09124; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
+                        +420 608 318 259 |
                       </a>
-                      <a href="mailto:takac@finomgroup.cz;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
-                        takac@finomgroup.cz |
+                      <a href="mailto:cevorova@finom.cz;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #d09124; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
+                        cevorova@finom.cz |
                       </a>
-                      <a href="https://finomgroup.cz" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
-                        finomgroup.cz |
+                      <a href="https://finom.cz" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #d09124; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
+                        finom.cz |
                       </a>
                       <span class="sm-block sm-mt-8" style="margin-left: 2px;">
                         <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_fb_gmpsgi.png" width="14" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 14px;" alt="">
-                        <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_li_youztx.png" width="14" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 14px;" alt="">
                         <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_ig_udvsgw.png" width="14" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 14px;" alt="">
-                        <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237020/finom_email-signature/icons/icon_tw_ro7ora.png" width="14" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 14px;" alt="">
                       </span>
                     </p>
                   </td>
@@ -129,18 +127,18 @@
             <table class="sm-w-full" style="width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
               <tr>
                   <td class="sm-w-1-4 sm-px-0" style="width: 16.666667%; padding-left: 0; font-weight: 300; color: #262626;">
-                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1643888951/finom_email-signature/profile-takac_uwavwd.png" width="70" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 70px;" alt="">
+                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641814098/finom_email-signature/profile-cevorova_e9r2mw.png" width="70" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 70px;" alt="">
                   </td>
                 <td class="sm-w-3-4" style="width: 83.333333%; padding-left: 0; font-size: 10px; color: #a2a0a0;">
                   <p style="margin-bottom: 4px; font-weight: 700; text-transform: uppercase;">
-                    Finom Group a.s.
+                    Finom finance &amp; invest s.r.o.
                   </p>
                   <p style="margin: 0;">
-                    Vavrečkova 7074  |  760 01 Zlín | <a href="mailto:info@finomgroup.cz;" style="font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #a2a0a0; text-decoration: none;">info@finomgroup.cz</a>
+                    Stojanova 1334  |  686 01 Uherské Hradiště | <a href="mailto:info@finom.cz;" style="font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #a2a0a0; text-decoration: none;">info@finom.cz</a>
                   </p>
                   <p style="font-size: 11px; font-weight: 500; text-transform: uppercase;">
-                    <a href="https://www.finomgroup.cz" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #a2a0a0; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
-                      www.finomgroup.cz
+                    <a href="https://www.finom.cz" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #a2a0a0; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
+                      www.finom.cz
                     </a>
                   </p>
                 </td>
