--- a/build_production/jednotlivci-provizorni/signature_finom-polaskova.html
+++ b/build_production/jednotlivci-provizorni/signature_finom-polaskova.html
@@ -96,26 +96,25 @@
                 <tr>
                   <td class="sm-px-0" style="padding-left: 0; padding-right: 0; font-weight: 300; color: #262626;">
                     <p style="margin: 0; margin-bottom: 4px; font-weight: 700; text-transform: uppercase; line-height: 2.5rem;">
-                      Jakub Takáč
+                      Bc. Veronika Polášková
                     </p>
                     <p style="margin: 0; font-size: 10px; font-weight: 300; text-transform: uppercase; letter-spacing: 1px;">
-                      BUSINESS DEVELOPMENT | PARTNER | DEVELOPMENT
+                      GENERAL MANAGER
                     </p>
                     <p style="font-size: 11px; font-weight: 700;">
-                      <a href="tel:+420 777 364 446;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
-                        +420 777 364 446 |
+                      <a href="tel:+420 773 775 866;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
+                        +420 773 775 866 |
                       </a>
-                      <a href="mailto:takac@finomgroup.cz;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
-                        takac@finomgroup.cz |
+                      <a href="mailto:info@finomgroup.cz;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
+                        info@finomgroup.cz |
                       </a>
-                      <a href="https://finomgroup.cz" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
-                        finomgroup.cz |
+                      <a href="https://finom.cz" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
+                        finom.cz |
                       </a>
                       <span class="sm-block sm-mt-8" style="margin-left: 2px;">
                         <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_fb_gmpsgi.png" width="14" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 14px;" alt="">
                         <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_li_youztx.png" width="14" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 14px;" alt="">
                         <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_ig_udvsgw.png" width="14" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 14px;" alt="">
-                        <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237020/finom_email-signature/icons/icon_tw_ro7ora.png" width="14" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 14px;" alt="">
                       </span>
                     </p>
                   </td>
@@ -129,7 +128,7 @@
             <table class="sm-w-full" style="width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
               <tr>
                   <td class="sm-w-1-4 sm-px-0" style="width: 16.666667%; padding-left: 0; font-weight: 300; color: #262626;">
-                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1643888951/finom_email-signature/profile-takac_uwavwd.png" width="70" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 70px;" alt="">
+                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641814098/finom_email-signature/profile-polaskova_hhpdge.png" width="70" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 70px;" alt="">
                   </td>
                 <td class="sm-w-3-4" style="width: 83.333333%; padding-left: 0; font-size: 10px; color: #a2a0a0;">
                   <p style="margin-bottom: 4px; font-weight: 700; text-transform: uppercase;">
