fix typography + build

--- a/build_production/jednotlivci-provizorni/signature_finom-antonovic.html
+++ b/build_production/jednotlivci-provizorni/signature_finom-antonovic.html
@@ -56,21 +56,21 @@
 </head>
 <body style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #ffffff;">
   <div role="article" aria-roledescription="email" aria-label="Signature" lang="en">
-      <table class="sm-w-full" style="width: 600px; padding: 16px; font-family: ui-sans-serif, system-ui, -apple-system, 'Lato', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
+      <table class="sm-w-full" style="width: 600px; font-family: ui-sans-serif, system-ui, -apple-system, 'Lato', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
         <tr>
           <td align="center">
             <table class="sm-w-full" style="margin-bottom: 24px; width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
               <tr>
-                <td class="sm-px-0" style="padding-left: 0; padding-right: 0; font-weight: 300; color: #262626;">
-                  <div style="margin: 0; margin-bottom: 16px; font-weight: 700;">
-                    Dobrý den,
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td class="sm-px-0" style="padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 300; color: #262626; border-bottom: 1px solid #e8e7e4;">
-                  <div style="margin: 0; font-size: 12px;">
-                    zde obsah vaší zprávy.
+                <td class="sm-px-0" style="padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 400; color: #262626; border-bottom: 1px solid #e8e7e4;">
+                  <div style="margin: 0; font-size: 12px; line-height: 2;">
+                    Ahoj kluci,
+                    <br><br>
+                    Mám muže asi třetí zpětnou vazbu s Tím,že písmo v našich mailech se zobrazuje jako velmi malé a šedivé.
+                    Bylo by dobré to tedy změnit.
+                    <br><br>
+                    Děkuju
+                    <br><br>
+                    S přáním hezkého dne,
                   </div>
                 </td>
               </tr>
