--- a/build_production/jednotlivci-provizorni/signature_finom-pikova.html
+++ b/build_production/jednotlivci-provizorni/signature_finom-pikova.html
@@ -61,8 +61,8 @@
           <td align="center">
             <table class="sm-w-full" style="margin-bottom: 24px; width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
               <tr>
-                <td class="sm-px-0" style="padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 300; color: #262626; border-bottom: 1px solid #e8e7e4;">
-                  <div style="margin: 0; font-size: 12px;">
+                <td class="sm-px-0" style="padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 400; color: #262626; border-bottom: 1px solid #e8e7e4;">
+                  <div style="margin: 0; font-size: 12px; line-height: 2;">
                     S pozdravem,
                   </div>
                 </td>
