--- a/build_production/jednotlivci-provizorni/signature_finom-takac.html
+++ b/build_production/jednotlivci-provizorni/signature_finom-takac.html
@@ -61,16 +61,9 @@
           <td align="center">
             <table class="sm-w-full" style="margin-bottom: 24px; width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
               <tr>
-                <td class="sm-px-0" style="padding-left: 0; padding-right: 0; font-weight: 300; color: #262626;">
-                  <div style="margin: 0; margin-bottom: 16px; font-weight: 700;">
-                    Dobrý den,
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td class="sm-px-0" style="padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 300; color: #262626; border-bottom: 1px solid #e8e7e4;">
-                  <div style="margin: 0; font-size: 12px;">
-                    zde obsah vaší zprávy.
+                <td class="sm-px-0" style="padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 400; color: #262626; border-bottom: 1px solid #e8e7e4;">
+                  <div style="margin: 0; font-size: 12px; line-height: 2;">
+                    S pozdravem,
                   </div>
                 </td>
               </tr>
