--- a/build_production/jednotlivci-provizorni/signature_finom-vadura.html
+++ b/build_production/jednotlivci-provizorni/signature_finom-vadura.html
@@ -56,21 +56,14 @@
 </head>
 <body style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #ffffff;">
   <div role="article" aria-roledescription="email" aria-label="Signature" lang="en">
-      <table class="sm-w-full" style="width: 600px; padding: 16px; font-family: ui-sans-serif, system-ui, -apple-system, 'Lato', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
+      <table class="sm-w-full" style="width: 600px; font-family: ui-sans-serif, system-ui, -apple-system, 'Lato', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
         <tr>
           <td align="center">
             <table class="sm-w-full" style="margin-bottom: 24px; width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
               <tr>
-                <td class="sm-px-0" style="padding-left: 0; padding-right: 0; font-weight: 300; color: #262626;">
-                  <div style="margin: 0; margin-bottom: 16px; font-weight: 700;">
-                    Dobrý den,
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td class="sm-px-0" style="padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 300; color: #262626; border-bottom: 1px solid #e8e7e4;">
-                  <div style="margin: 0; font-size: 12px;">
-                    zde obsah vaší zprávy.
+                <td class="sm-px-0" style="padding-left: 0; padding-right: 0; padding-bottom: 24px; font-weight: 400; color: #262626; border-bottom: 1px solid #e8e7e4;">
+                  <div style="margin: 0; font-size: 12px; line-height: 2;">
+                    S pozdravem,
                   </div>
                 </td>
               </tr>
@@ -129,7 +122,7 @@
             <table class="sm-w-full" style="width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
               <tr>
                   <td class="sm-w-1-4 sm-px-0" style="width: 16.666667%; padding-left: 0; font-weight: 300; color: #262626;">
-                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641814099/finom_email-signature/profile-vadura_ydq47t.png" width="70" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 70px;" alt="">
+                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1645529732/finom_email-signature/profile_vadura_02_uy2scb.png" width="70" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 70px;" alt="">
                   </td>
                 <td class="sm-w-3-4" style="width: 83.333333%; padding-left: 0; font-size: 10px; color: #a2a0a0;">
                   <p style="margin-bottom: 4px; font-weight: 700; text-transform: uppercase;">
